--- a/tutorials/Demo.Rmd
+++ b/tutorials/Demo.Rmd
@@ -75,7 +75,7 @@ To begin, please download the following packages:
 ``` r
 install.packages("remotes")
 remotes::install_github("nmfs-ost/asar")
-remotes::install_github("nmfs-ost/satf")
+remotes::install_github("nmfs-ost/stockplotr")
 ```
 
 Also ensure that [Quarto](https://quarto.org/docs/download/index.html) is installed.
@@ -150,17 +150,17 @@ output <- asar::convert_output(
 
 ### Prepare Tables and Figures
 
-Figures and tables are created with the [`satf`](https://github.com/nmfs-ost/satf) package, which was designed to work in conjunction with `asar` to increase the automation of stock assessment reports. The input for `satf` is a standardized framework of data produced from the `asar` function `convert_output` (i.e., a "converted" model results file). The output is a collection of pre-coded tables (made with [`flextable`](https://github.com/davidgohel/flextable)) and figures (made with [`ggplot2`](https://github.com/tidyverse/ggplot2)). Both of these packages can operate independently as desired.
+Figures and tables are created with the [`stockplotr`](https://github.com/nmfs-ost/stockplotr) package, which was designed to work in conjunction with `asar` to increase the automation of stock assessment reports. The input for `stockplotr` is a standardized framework of data produced from the `asar` function `convert_output` (i.e., a "converted" model results file). The output is a collection of pre-coded tables (made with [`flextable`](https://github.com/davidgohel/flextable)) and figures (made with [`ggplot2`](https://github.com/tidyverse/ggplot2)). Both of these packages can operate independently as desired.
 
-The user has two options to create tables and figures with `satf`:
+The user has two options to create tables and figures with `stockplotr`:
 
-(1) Create all figures and tables with `satf`, then run `asar`. To do this, run the following code BEFORE running `asar::create_template`:
+(1) Create all figures and tables with `stockplotr`, then run `asar`. To do this, run the following code BEFORE running `asar::create_template`:
 
 ``` r
 # Read in converted output file
 output <- utils::read.csv(here::here("petrale_sole_std_output.csv"))
 # Run function
-satf::exp_all_figs_tables(
+stockplotr::exp_all_figs_tables(
   dat = output,
   end_year = 2022,
   rda_dir = here::here(),
@@ -169,7 +169,7 @@ satf::exp_all_figs_tables(
   indices_unit_label = "CPUE")
 ```
 
-*Note:* The dat file in the above function should be the converted dataframe from the `convert_output` function ran earlier in this tutorial. If you want increased customization for these tables/figures, we encourage you to run various functions in `satf` individually.
+*Note:* The dat file in the above function should be the converted dataframe from the `convert_output` function ran earlier in this tutorial. If you want increased customization for these tables/figures, we encourage you to run various functions in `stockplotr` individually.
 
 (2) To create figures and tables *and* the report template in the same step, set specific arguments in `asar::create_template` to run everything together. The arguments are as follows:
 
@@ -205,7 +205,7 @@ After selecting one of the two above options, you should have created a folder t
 
 ## Run `create_template`
 
-Define your arguments for creating a stock assessment report template. Running the function without any arguments (e.g., `asar::create_template()`) will produce a blank report; however, you will need to be familiar enough with Quarto to make edits for a completed report. Running a blank template will also not include any pre-coded tables or figures in the folder. You can find more information on these objects in the [`satf` package](https://github.com/nmfs-ost/satf).
+Define your arguments for creating a stock assessment report template. Running the function without any arguments (e.g., `asar::create_template()`) will produce a blank report; however, you will need to be familiar enough with Quarto to make edits for a completed report. Running a blank template will also not include any pre-coded tables or figures in the folder. You can find more information on these objects in the [`stockplotr` package](https://github.com/nmfs-ost/stockplotr).
 
 Recommended minimum arguments:
 
@@ -318,7 +318,7 @@ asar::create_template(
 
 ## What to Expect {.tabset}
 
-### Skeleton Pop-up
+### Skeleton
 
 During processing, you will see progress for the template being built in the R console. A message is displayed that let's you know where the template was saved and to fill out the template.
 
@@ -348,7 +348,7 @@ For more information on markdown notation and how to efficiently write a report 
 
 ## Figure and Table Chunks
 
-The pre-made tables and figures are generated through the use of a separate package called `satf`. By separating these two functions, it allows you to evaluate results files quickly without also generating the report. However, these two packages were co-developed to seamlessly integrate with one another and streamline the stock assessment workflow.
+The pre-made tables and figures are generated through the use of a separate package called `stockplotr`. By separating these two functions, it allows you to evaluate results files quickly without also generating the report. However, these two packages were co-developed to seamlessly integrate with one another and streamline the stock assessment workflow.
 
 In the `08_tables.qmd` and `09_figures.qmd` Quarto files located in your folder, there will be a series of pre-made tables and figures that includes pre-written generic captions and alternative text. You are able to include or not include these objects at will. We recommend to include all default objects, but if a table or figure doesn't apply, you are able to prevent the object from being added to the report by changing the option of **eval** to false.
 
@@ -428,7 +428,7 @@ quarto render SAR_USWC_Petrale_sole_skeleton.qmd
 
 -   DO NOT make changes to the area between the three dashes in the Quarto skeleton file (`---`) unless you are very familiar with Quarto. This area controls all of the formatting and will be the most likely spot for causing the document to break when rendering.
 
--   In the future, additional tables and figures will be available from the [`satf`](https://github.com/nmfs-ost/satf) R package. Users can add these in by clicking the drop down button that looks like a square with a c in it or manually write in
+-   In the future, additional tables and figures will be available from the [`stockplotr`](https://github.com/nmfs-ost/stockplotr) R package. Users can add these in by clicking the drop down button that looks like a square with a c in it or manually write in
 
 ``` r
 #| label: ''
@@ -437,10 +437,10 @@ quarto render SAR_USWC_Petrale_sole_skeleton.qmd
 #| eval: true 
 #| fig-cap: "Insert figure/table caption"
 #| fig-alt: "Insert alternative text for figure/table"
-satf::plot_recruitment(dat = output)
+stockplotr::plot_recruitment(dat = output)
 ```
 
--   `asar` is a continual work in progress. Version 1.0 is planned for release in Janurary 2025 with additional features added in through 2025. Please leave an [issue](https://github.com/nmfs-ost/asar/issues) for any bugs you may run into.
+-   `asar` is a continual work in progress. We are currently in version 1.2 of `asar` with continuous progress planned for 2025. Please leave an [issue](https://github.com/nmfs-ost/asar/issues) for any bugs you may run into.
 
 -   Check out our [Frequently Asked Questions (FAQ) page](https://nmfs-ost.github.io/asar/articles/faqs.html) for more guidance using `asar`.
 
